[gd_scene load_steps=8 format=3 uid="uid://rc11ooima81g"]

[ext_resource type="Script" uid="uid://bp2p5e52flwjx" path="res://src/asteroid_spawner.gd" id="1_5q4o7"]
[ext_resource type="PackedScene" uid="uid://cdeyp0w1o4al" path="res://src/player.tscn" id="1_eewff"]
[ext_resource type="Script" uid="uid://bmhm7eah30oon" path="res://src/game.gd" id="1_fyndt"]
[ext_resource type="Script" uid="uid://b13eupj26gsy5" path="res://src/border_area.gd" id="1_gh0ne"]
[ext_resource type="PackedScene" uid="uid://cs1eyq66ak8ho" path="res://src/asteroid.tscn" id="3_5q4o7"]

[sub_resource type="LabelSettings" id="LabelSettings_bs6l1"]
font_size = 64
font_color = Color(0, 0, 0, 0)
outline_size = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eewff"]
size = Vector2(1000, 1000)

[node name="Game" type="Node2D"]
script = ExtResource("1_fyndt")

[node name="AsteroidSpawner" type="Node2D" parent="."]
script = ExtResource("1_5q4o7")
asteroid_scene = ExtResource("3_5q4o7")

[node name="SpawnTimer" type="Timer" parent="AsteroidSpawner"]
one_shot = true
autostart = true

[node name="Background" type="ColorRect" parent="."]
offset_right = 1000.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 1)

[node name="Points" type="Label" parent="."]
offset_right = 1000.0
offset_bottom = 80.0
text = "0"
label_settings = SubResource("LabelSettings_bs6l1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BorderArea" type="Area2D" parent="."]
position = Vector2(500, 500)
collision_layer = 0
script = ExtResource("1_gh0ne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderArea"]
shape = SubResource("RectangleShape2D_eewff")

[node name="Player" parent="." instance=ExtResource("1_eewff")]
position = Vector2(500, 500)

[connection signal="asteroid_hit" from="AsteroidSpawner" to="." method="_on_asteroid_spawner_asteroid_hit"]
[connection signal="timeout" from="AsteroidSpawner/SpawnTimer" to="AsteroidSpawner" method="_on_timer_timeout"]
[connection signal="area_exited" from="BorderArea" to="BorderArea" method="_on_area_exited"]
[connection signal="player_destroyed" from="Player" to="." method="_on_player_player_destroyed"]
